--- a/styles.css
+++ b/styles.css
@@ -485,6 +485,14 @@ mark,
   height: 100%;
 }
 
+@media only screen and (max-width: 750px) {
+  .img-fluid {
+    max-width: 100%;
+    object-fit: cover;
+    height: auto;
+  }
+}
+
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
